--- a/src/main/resources/public/index.css
+++ b/src/main/resources/public/index.css
@@ -1,10 +1,127 @@
-div {
-	border: 1px solid blue;
-	margin: 1em;
+html {
+	height: 100%;
+}
+body {
+	margin: 0;
+	padding: 0 20px;
+	background: url("background_large.png") no-repeat;
+	background-size: cover;
+	font-family: Arial Unicode MS, Arial, sans serif;
+}
+body > div {
+	max-width: 1000px;
+	margin: 100px auto 0;
+}
+#navigation {
+	color: #0055aa;
+	font-weight: bold;
+	font-size: 1.2em;
+	margin: 10px 0 10px;
+}
+#inventory {
+	display: none;
+}
+#shopping-list {
+	display: none;
+}
+a {
+	color: #0055aa;
+	text-decoration: none;
+}
+a:hover {
+	color: #0066bb;
+	text-decoration: underline;
+}
+header {
+	color: #0055aa;
+	font-weight: bold;
+	font-size: 6em;
 }
 table {
-	border: 1px solid;
+	width: 100%;
+	border-collapse: collapse;
+}
+caption {
+	font-size: 1.2em;
+	padding: 20px 0 20px;
+	color: #0055aa;
+	font-weight: bold;
+	text-align: left;
+}
+thead {
+	background-color: #0055aa;
+	color: white;
+	text-align: left;
+	box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+
+}
+th {
+	padding: 10px;
+}
+th:first-child {
+	border-radius: 5px 0 0 0;
+}
+th:last-child {
+	border-radius: 0 5px 0 0;
+}
+tbody {
+	background-color: white;
+	color: #666;
+	box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.3);
+}
+tr:not(:last-child) {
+	border-bottom: 1px solid #ccc;
+}
+tr:last-child td:first-child {
+	border-radius: 0 0 0 5px;
+}
+tr:last-child td:last-child {
+	border-radius: 0 0 5px 0;
+}
+tr:hover td {
+	background-color: #ccc;
 }
 td {
-	border: 1px solid;
+	padding: 10px;
+}
+td:last-child, td:first-child {
+	width: 1%;
+}
+input[type=text] {
+	border-radius: 5px;
+	width: 100%;
+	line-height: 1.7em;
+	border: 1px solid #0055aa;
+	padding-left: 5px;
+}
+button {
+	line-height: 1.7em;
+	color: white;
+	background-color: #0055aa;
+	border: none;
+	border-radius: 5px;
+	padding: 2px 10px;
+	box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
+	font-weight: bold;
+}
+button:focus {
+	outline: none;
+}
+button:hover {
+	background-color: #0066bb;
+}
+button:active {
+	box-shadow: none;
+}
+@media screen and (max-width: 640px) {
+	header {
+		font-size: 2em;
+	}
+	table {
+		margin-top: 0;
+	}
+	header img {
+		height: 0.7em;
+		width: 0.7em;
+	}
 }
