--- a/src/main/resources/public/index.css
+++ b/src/main/resources/public/index.css
@@ -113,7 +113,7 @@ td {
 #inventory th:last-child, #inventory th:nth-last-child(3), #inventory th:first-child {
 	width: 1%;
 }
-#inventory th:nth-last-child(2){
+#inventory th:nth-last-child(2) {
 	width: 10em;
 }
 #inventory td:nth-last-child(3), #inventory thead tr:last-child th:nth-last-child(3) {
@@ -132,6 +132,9 @@ input, select {
 	line-height: 1.7em;
 	border: 1px solid #0055aa;
 	padding-left: 5px;
+}
+input:invalid {
+	border: 1px solid red;
 }
 caption input {
 	width: 4em;
